# coopi

./: .dockerignore  .gitignore  .pylintrc  .trivyignore  Dockerfile  LICENSE  README.md  app.py  balena.yml  compose.yaml  config.py  coopi.py  docker-compose.yaml  door_control.py  door_state.py  mediamtx.yml  pyproject.toml  requirements.txt  schedule.json  sensors.py  webstreaming.py
.github/workflows/: balena-deploy.yml  docker-build.yml  ghcr-build.yml  pylint.yml  security-scan.yml
coopi/: coopi.py
coopi copy/: coopi.py  door_control.py
coopi/motion_detection/: singlemotiondetector.py
coopi/templates/: index.html
doc/img/: sketch.fzz
extras/: coopi.service  nginx.conf
http/: capture  close.py  config.php  index.php  index2.php  open.py  wrapper.php
static/: state.json  style.css
templates/: index.html
