[tool.poetry]
name = "coopi"
version = "0.1.0"
description = ""
authors = ["Liam MacKenzie <lmacka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"

[[tool.poetry.source]]
name = "piwheels"
url = "https://www.piwheels.org/simple/"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
