[tool.poetry]
name = "coopi"
version = "0.1.0"
description = ""
authors = ["Liam MacKenzie <lmacka@gmail.com>"]
readme = "README.md"

[[tool.poetry.source]]
name = "piwheels"
url = "https://www.piwheels.org/simple/"
priority = "default"

[tool.poetry.dependencies]
python = ">=3.9"
rpi-gpio = "^0.7.1"
automationhat = "^1.0.0"
adafruit-blinka = "^8.39.1"
board = "^1.0"
smbus = "^1.1.post2"
greenponik-bh1750 = "^0.0.7"
adafruit-circuitpython-dht = "^4.0.4"
gpiod = "^2.1.3"
gpiodevice = "^0.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
